--- a/src/views/errorLogin.ejs
+++ b/src/views/errorLogin.ejs
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error Login</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body>
-    <h1>Usuario o contraseña no corresponde</h1>
-    <button onclick="location.href='/'">Go to Login</button>
+<body class="container mt-5">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <h1>Usuario o contraseña no corresponde</h1>
+    </div>
+    <button class="btn btn-primary mt-3" onclick="location.href='/'">Logout</button>
+
 </body>
 
 </html>
