--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Informacion </title>
 </head>
 
-<body>
-    <h2>Bienvenido <%= nombre %></h2>
-    <button onclick="location.href='/logout'">Logout</button>
+<body class="container mt-5">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <h1>Bienvenido <%= nombre %></h1>
+    </div>
+    <button class="btn btn-primary mt-3" onclick="location.href='/logout'">Logout</button>
+
 </body>
 
 </html>
